colocando uma nova tela (turmas)

--- a/pages/adm/cursos.html
+++ b/pages/adm/cursos.html
@@ -60,6 +60,11 @@
             MATÉRIAS
           </a>
         </li>
+        <li>
+          <a class="menuLateral__anchor" href="turmas.html">
+              TURMAS
+          </a>
+      </li>
       </ul>
     </div>
 
