--- a/pages/professor/alunos.html
+++ b/pages/professor/alunos.html
@@ -32,7 +32,7 @@
     <script src="/js/adicionar.js" defer type="module"></script>
     <script src="/js/relatorio.js" defer type="module"></script>
 
-    <title>Document</title>
+    <title>ALUNOS</title>
 </head>
 
 <body>
@@ -49,7 +49,7 @@
     <main id="root_aluno">
         <div class="container container-areaAluno" id="container-areaAluno">
             <div class="container_topo">
-                <p>Lista de alunos</p>
+                <p>ALUNOS</p>
                 <div class="linha"></div>
             </div>  
             <div class="cards_turma_professor">
