--- a/pages/adm/administrador.html
+++ b/pages/adm/administrador.html
@@ -56,6 +56,11 @@
                         MATÉRIAS
                     </a>
                 </li>
+                <li>
+                    <a class="menuLateral__anchor" href="turmas.html">
+                        TURMAS
+                    </a>
+                </li>
             </ul>
         </div>
 
