--- a/pages/adm/alunos.html
+++ b/pages/adm/alunos.html
@@ -51,6 +51,11 @@
               MATÉRIAS
             </a>
           </li>
+          <li>
+            <a class="menuLateral__anchor" href="turmas.html">
+                TURMAS
+            </a>
+        </li>
         </ul>
       </div>
   
