--- a/pages/professor/disciplinas.html
+++ b/pages/professor/disciplinas.html
@@ -45,7 +45,7 @@
     <main id="root_aluno">
         <div class="container container-areaAluno" id="container-areaAluno">
             <div class="container_topo">
-                <p>Lista de Disciplinas</p>
+                <p>DISCIPLINAS</p>
                 <div class="linha"></div>
             </div>  
             <div class="cards_discipinas_professor">
