pegando id turma

--- a/pages/professor/disciplinas.html
+++ b/pages/professor/disciplinas.html
@@ -25,6 +25,7 @@
     <!-- COMPONENTS -->
     <script src="/components/header.js" defer type="module"></script>
     <script src="/components/nav.js" defer type="module"></script>
+    <script src="/js/disciplinasProfessor.js" defer type="module"></script>
 
 
 
