pegando disciplina pelo id materia

--- a/pages/professor/disciplinas.html
+++ b/pages/professor/disciplinas.html
@@ -50,7 +50,7 @@
                 <div class="linha"></div>
             </div>  
             <div class="cards_discipinas_professor">
-                <a href="#" class="card_disciplina">
+                <!-- <a href="#" class="card_disciplina">
                     <h3 class="nome_disciplina">PWBE</h3>
                     <p class="descricao_disciplina">Programação web back end, desenvolvida para aprender back end</p>
                     <span class="horario"><i class="fa-solid fa-clock"></i>200h</span>
@@ -79,7 +79,7 @@
                     <h3 class="nome_disciplina">PWBE</h3>
                     <p class="descricao_disciplina">Programação web back end, desenvolvida para aprender back end</p>
                     <span class="horario"><i class="fa-solid fa-clock"></i>200h</span>
-                </a>
+                </a> -->
 
             </div>  
         </div>
