tarefas pelo id da matéria

--- a/pages/professor/tarefas.html
+++ b/pages/professor/tarefas.html
@@ -36,7 +36,7 @@
         <div class="container container-tarefas" id="container-tarefas">
             <div class="container_topo">
                 <div class="nome_buttons">
-                    <p id="nomeTurma">Tarefas da turma de tal</p>
+                    <p id="nomeTurma">Tarefas da materia de tal</p>
                     <div class="adicionar_editar_deletar">
                         <button class="fas fa-plus" id="adicionarTarefa"></button>
                     </div>
