--- a/pages/professor/turmas.html
+++ b/pages/professor/turmas.html
@@ -36,7 +36,7 @@
         link_button="../index.html"></header-padrao>
     <!-- NAV PRINCIPAL -->
     <nav-professor nome1="Cursos" link1="/pages/professor/cursos.html" nome2="Turmas"
-        link2="/pages/professor/turmas.html" nome3="Disciplinas" link3="/pages/professor/disciplinas.html"
+        link2="/pages/professor/turmas.html" nome3="Disciplinas" 
         nome4="Alunos" link4="/pages/professor/alunos.html">
     </nav-professor>
 
