--- a/pages/aluno/areaAluno.html
+++ b/pages/aluno/areaAluno.html
@@ -32,24 +32,18 @@
 
 <body>
     <header-padrao color_top="#3084B4" color_button="#DA251C" text_button="VOLTAR"
-        link_button="../index.html"></header-padrao>
+        link_button="/index.html"></header-padrao>
     <nav>
         <ul class="busca">
             <a href="/pages/aluno/materia.html"  class="materia">
                 Matéria
-            </a>
-            <a href="/pages/aluno/areaAluno.html"  class="areaAluno">
-                Área do Aluno
-            </a>
-            <a href="/pages/aluno/horario.html" class="horario">
-                Horário
             </a>
         </ul>
     </nav>
     <main id="root_aluno">
         <div class="container container-areaAluno" id="container-areaAluno">
             <div class="container_topo">
-                <p>Turma de Mecânica - M3</p>
+                <p class="nomeDaMateria"></p>
                 <div class="linha"></div>
             </div>  
             <div class="cards_turma">
