--- a/pages/aluno/materia.html
+++ b/pages/aluno/materia.html
@@ -36,17 +36,11 @@
 
 <body>
     <header-padrao color_top="#3084B4" color_button="#DA251C" text_button="VOLTAR"
-        link_button="../index.html"></header-padrao>
+        link_button="/index.html"></header-padrao>
     <nav>
         <ul class="busca">
             <a href="/pages/aluno/materia.html"  class="materia">
                 Matéria
-            </a>
-            <a href="/pages/aluno/areaAluno.html"  class="areaAluno">
-                Área do Aluno
-            </a>
-            <a href="/pages/aluno/horario.html" class="horario">
-                Horário
             </a>
         </ul>
     </nav>
