Fazendo CRUD dos alunos no Adm

--- a/pages/adm/alunos.html
+++ b/pages/adm/alunos.html
@@ -8,6 +8,8 @@
 
     <script src="../../components/header.js"></script>
     <script src="../../js/adm_alunos.js" type="module" defer></script>
+    <script src="../../js/admCRUD/modal_alunos.js" type="module" defer></script>
+
     <script src="https://kit.fontawesome.com/30058942d9.js" crossorigin="anonymous"></script>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
