professor funcionando e modal do professor feito

--- a/pages/adm/administrador.html
+++ b/pages/adm/administrador.html
@@ -79,7 +79,7 @@
             </section>
 
             <!-- MODAL ADICIONAR CURSOS -->
-            <!-- <div id="modal__adicionar" class="modal__adicionar">
+            <div id="modal__adicionar" class="modal__adicionar">
                 <form class="modal__adicionar--content" id="modal__adicionar--content">
                     <p class="nome__modal">Adicionar um Matéria</p>
                     <div class="input__nome">
@@ -88,21 +88,29 @@
                     </div>
                     <div class="sigla__carga--horaria">
                         <div class="input__sigla">
-                            <label for="">Sigla:</label>
+                            <label for="">NIF:</label>
                             <input type="text" name="sigla" id="myInputSigla" maxlength="5" required>
                         </div>
                         <div class="input__carga--horaria">
-                            <label for="">Carga Horaria:</label>
+                            <label for="">Telefone:</label>
                             <input type="number" name="carga_horaria" id="myInputCargaHoraria" min="0" required>
                         </div>
                     </div>
                     <div class="input__descricao">
-                        <label for="">Descrição:</label>
-                        <textarea tabindex="5" id="myInputDescricao" required></textarea>
+                        <label for="">Email pessoal:</label>
+                        <input type="text" name="sigla" id="myInputSigla" maxlength="5" required>
                     </div>
-                    <div class="dropdownCurso">
+                    <div class="input__descricao">
+                        <label for="">Email institucional:</label>
+                        <input type="text" name="sigla" id="myInputSigla" maxlength="5" required>
+                    </div>
+                    <div class="input__descricao">
+                        <label for="">Senha:</label>
+                        <input type="text" name="sigla" id="myInputSigla" maxlength="5" required>
+                    </div>
+                    <!-- <div class="dropdownCurso">
                         <div class="adicionar--curso">
-                            <label for="materias_cursos">Está matéria é de qual curso?</label>
+                            <label for="materias_cursos">qual curso?</label>
                             <a href="" class="fas fa-plus"></a>
                         </div>
                         <select id="materias_cursos" name="cursos">
@@ -110,13 +118,13 @@
                             <option value="redesDeComputadores">redes de computadores</option>
                             <option value="eletroeletronica">eletroeletronica</option>
                         </select>
-                    </div>
+                    </div> -->
                     <div class="modal__adicionar--footer">
                         <a type="submit" id="salvarBtn">Salvar</a>
                     </div>
                     <a href="#" class="modal__adicionar--close">&times;</a>
                 </form>
-            </div> -->
+            </div>
 
             <!-- MODAL EDITAR CURSOS -->
             <!-- <div id="modal__editar" class="modal__editar">
