Atualizando Modal Alunos Editar

--- a/pages/adm/alunos.html
+++ b/pages/adm/alunos.html
@@ -115,15 +115,15 @@
         <!-- MODAL EDITAR ALUNOS -->
         <div id="modal__editar" class="modal__editar">
           <form class="modal__editar--content" id="modal__editar--content">
-            <p class="nome__modal">Adicionar um Aluno</p>
+            <p class="nome__modal">Editar um Aluno</p>
             <div class="input__nome">
               <label for="">Nome do Aluno:</label>
-              <input type="text" name="nome" id="myInputNomeValor" maxlength="100" style="width: 100%;" placeholder="José Batista da Silva" required>
+              <input type="text" name="nome" id="myInputNomeValor" maxlength="100" style="width: 100%;" placeholder="Insira um nome" required>
             </div>
             <div class="matricula__data--nascimento">
               <div class="input__matricula">
                 <label for="">Matricula:</label>
-                <input type="number" name="matricula" id="myInputMatriculaValor" maxlength="5" placeholder="55585555" required>
+                <input type="number" name="matricula" id="myInputMatriculaValor" maxlength="5" placeholder="12345678" required>
               </div>
               <div class="input__data--nascimento">
                 <label for="">Data de Nascimento:</label>
