professor conseguiu ver critérios

--- a/pages/professor/criterios.html
+++ b/pages/professor/criterios.html
@@ -46,7 +46,13 @@
             <div class="adicionar_editar_deletar">
                 <button class="fas fa-plus" id="adicionar"></button>
             </div>
-            <div class="cards_turma_professor">
+            <div class="cards_criterio_professor">
+                <!-- <div class="cardCriterio">
+                    <span>Descrição: blablablaajnnnjjaajan haajjajj
+                        ffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffa</span>
+                    <span>Tipo Crítico: true</span>
+                    <span>"observacao_nota_criterio: false</span>
+                </div> -->
             </div>  
         </div>
        
