--- a/pages/professor/alunos.html
+++ b/pages/professor/alunos.html
@@ -35,6 +35,7 @@
     <nav-professor 
         nome1="Cursos" link1="/pages/professor/cursos.html"
         nome2="Turmas" link2="/pages/professor/turmas.html"
+        nome3="Disciplinas" link3="/pages/professor/disciplinas.htm"
         nome4="Alunos" link4="/pages/professor/alunos.html">
     </nav-professor>
 
