--- a/pages/professor/criterios.html
+++ b/pages/professor/criterios.html
@@ -106,14 +106,14 @@
                 <h3>Edite um critério</h3>
             </div>
             <div class="inputsCriterio">
-                <textarea name="" placeholder="Digite a descrição do critério" id="descricaoCriterio"></textarea>
+                <textarea name="" placeholder="Digite a descrição do critério" id="descricaoCriterio2"></textarea>
                 <div class="contCritico cont">
-                    <label for="critico">Marque o checkbox se o critério for do tipo crítico:</label>
-                    <input type="checkbox" name="critico" id="critico">
+                    <label for="critico2">Marque o checkbox se o critério for do tipo crítico:</label>
+                    <input type="checkbox" name="critico" id="critico2">
                 </div>
                <div class="contNota cont">
-                <label for="observacaoNota">Marque o checkbox se esse critério afeta a nota:</label>
-                <input type="checkbox" name="observacaoNota" id="observacaoNota">
+                <label for="observacaoNota2">Marque o checkbox se esse critério afeta a nota:</label>
+                <input type="checkbox" name="observacaoNota" id="observacaoNota2">
                </div>
                 
             </div>
