Update do Status Funcionando

--- a/pages/adm/alunos.html
+++ b/pages/adm/alunos.html
@@ -143,7 +143,7 @@
               <input type="password" name="senha" id="myInputSenhaValor" maxlength="2000" style="width: 100%;" required>
             </div>
             <div class="modal__adicionar--footer">
-              <a type="submit" id="salvarBtn">Salvar</a>
+              <a type="submit" id="salvarBtnEditar">Salvar</a>
             </div>
             <a href="#" class="modal__adicionar--close">&times;</a>
           </form>
