Ativação e Inativação do Aluno Funcionando

--- a/pages/adm/alunos.html
+++ b/pages/adm/alunos.html
@@ -160,6 +160,18 @@
             <a href="#" class="modal__deletar--close" id="sair">&times;</a>
           </div>
         </div>
+
+        <!-- MODAL REATIVAR ALUNOS -->
+        <div class="modal__reativar" id="modal__reativar">
+          <div class="modal__reativar--content" id="modal__reativar--content">
+            <p class="nome__modal--reativar">Deseja mesmo Reativar o aluno?</p>
+            <div class="modal__reativar--footer">
+              <a type="submit" id="naoReativar" href="#">Não</a>
+              <a type="submit" id="Reativar" href="#">Sim</a>
+            </div>
+            <a href="#" class="modal__reativar--close" id="sair">&times;</a>
+          </div>
+        </div>
   
         <section class="containerCursos__menuConteudo containerCursos__menuConteudo--displayFlex">
           <div class="containerCursos__containerTabela">
