criei tabela resultado desejado

--- a/pages/professor/criterios.html
+++ b/pages/professor/criterios.html
@@ -58,6 +58,7 @@
                     <div class="buttoesFuncoes">
                         <button id="excluirTarefaButton">Excluir</button>
                         <button id="editarTarefaButton">Editar</button>
+                        <a href="./resultadodesejado.html"><button id="linkResultadoDesejado">Ir para resultado desejado</button></a>
                     </div>
 
                     <div class="modal_excluir d-none">
