ficou faltando create de desejado

--- a/pages/professor/resultadodesejado.html
+++ b/pages/professor/resultadodesejado.html
@@ -93,9 +93,9 @@
                 <h3>Adicione um resultado desejado</h3>
             </div>
             <div class="inputsTarefa d-flex flex-column">
-                <input type="number" placeholder="Digite o resultado desejado" id="nomeTarefa">
-                <input type="number" placeholder="Digite a margem de erro para mais" id="nomeTarefa">
-                <input type="number" placeholder="Digite a margem de erro para menos" id="nomeTarefa">
+                <input type="number" placeholder="Digite o resultado desejado" id="desejado">
+                <input type="number" placeholder="Digite a margem de erro para mais" id="margemMais">
+                <input type="number" placeholder="Digite a margem de erro para menos" id="margemMenos">
                 </div>
                 <button id="sendTarefa">Send</button>
             </div>
