arrumei estilização tela de critérios do aluno

--- a/pages/aluno/relatorio.html
+++ b/pages/aluno/relatorio.html
@@ -61,7 +61,11 @@
                 <div class="linha"></div>
                 <div class="criterios">
                     <li>Descrição do critério</li>
-                    <li>Observação</li>
+                    <div class="checklabels d-flex">
+                        <li>Observação</li>
+                        <li>Tipo crítico</li>
+                    </div>
+
                 </div>
             </div>
         </div>
